Issue #DV-22: Added theme colors and changed bigscreen spacing

--- a/themes/nyiaarhus/scss/_theme.scss
+++ b/themes/nyiaarhus/scss/_theme.scss
@@ -13,8 +13,9 @@ $gray-dark:        lighten($black, 50%);
 $gray-darker:      lighten($black, 40%);
 $gray-darkest:     lighten($black, 12%);
 
-$theme-color:             $gray-dark;
-$theme-color-secondary:   $gray-light;
+$theme-color:             #81902b;
+$theme-color-secondary:   #7191b2;
+$theme-color-tertiery:    #d6763e;
 
 $link-color:       $theme-color;
 $link-color-hover: darken($link-color, 25%);
@@ -52,4 +53,4 @@ $spacing-tablet-large:    40px;
 $spacing-desk:            30px;
 $spacing-desk-large:      60px;
 $spacing-bigscreen:       30px;
-$spacing-bigscreen-large: 100px;
+$spacing-bigscreen-large: 75px;
